refs task [FE] Create SplitBill Interface

--- a/index.html
+++ b/index.html
@@ -122,8 +122,9 @@
                                 </div>
 
                                 <div class="main-section2-become-content">
-                                    <p>Want to pay for anything is as easy as through the touch of a finger. Through SpliBills, you can carry out any transaction practically from bill payments, barcode scan transactions, to e-commerce. enjoy a payment method
-                                        that is faster, practical and safe.</p>
+                                    <p>Want to pay for anything is as easy as through the touch of a finger. Through SpliBills,
+                                        you can carry out any transaction practically from bill payments, barcode scan transactions,
+                                        to e-commerce. enjoy a payment method that is faster, practical and safe.</p>
                                 </div>
 
                                 <div class="sociali-group">
@@ -159,13 +160,14 @@
                             </div>
 
                             <div class="main-section3-content-multi ">
-                                <div class="main-section3-multi-img">
-                                    <img src="./assets/images/Xn5FbEM9564.svg">
-                                </div>
 
                                 <div class="main-section3-multi-text">
                                     <div class="multi-text1">Multi-Transaction</div>
                                     <div class="multi-text2">Easy use with multi transaction features</div>
+                                </div>
+
+                                <div class="main-section3-multi-img">
+                                    <img src="./assets/images/Xn5FbEM9564.svg">
                                 </div>
 
 
@@ -175,7 +177,7 @@
                             <div class="main-section3-content-safety">
 
                                 <div class="main-section3-safety-img">
-                                    <img src="../assets/images/Xn5FbEM9565.svg">
+                                    <img src="./assets/images/Xn5FbEM9565.svg">
                                 </div>
 
                                 <div class="main-section3-safety-text">
@@ -195,7 +197,7 @@
                                 </div>
 
                                 <div class="main-section3-cashless-img">
-                                    <img src="../assets/images/Xn5FbEM9566.svg">
+                                    <img src="./assets/images/Xn5FbEM9566.svg">
                                 </div>
 
                             </div>
@@ -217,20 +219,20 @@
                                             Try to be Cashless with<br />
                                             <span class="unline-splitbill">SplitBills</span>
                                         </div>
-                                        <div class="section4-promo1-img"><img src="../assets/images/pbgYcq3_Zx0.svg"></div>
+                                         <div class="section4-promo1-img"><img src="./assets/images/pbgYcq3_Zx0.svg"></div>
                                     </div>
 
                                     <div class="section4-promo2">
                                         <div class="section4-promo2-text">
                                             <span class="unline-splitbill">SplitBills</span> Can Be FUN!</div>
-                                        <div class="section4-promo2-img"><img src="../assets/images/ILpCscZCeR8.svg"></div>
+                                        <div class="section4-promo2-img"><img src="./assets/images/ILpCscZCeR8.svg"></div>
                                     </div>
 
                                     <div class="section4-promo3">
                                         <div class="section4-promo3-text">Modern Payment with
                                             <span class="unline-splitbill">SplitBills</span>
                                         </div>
-                                        <div class="section4-promo3-img"><img src="../assets/images/qydUw3DanPU.svg"></div>
+                                        <div class="section4-promo3-img"><img src="./assets/images/qydUw3DanPU.svg"></div>
                                     </div>
                                 </div>
 
@@ -324,7 +326,7 @@
                                     <div class="content3-submit-click">
 
                                         <div class="submit-click-rectangle">
-                                            <img src="../assets/images/Line.svg">
+                                            <img src="./assets/images/Line.svg">
                                         </div>
 
                                     </div>
@@ -340,11 +342,11 @@
 
                                 </div><br>
                                 <div class="group1-content4-googlepay">
-                                    <img src="../assets/images/Group 1095.svg">
+                                    <img src="./assets/images/Group 1095.svg">
                                 </div>
 
                                 <div class="group1-content4-appstore">
-                                    <img src="../assets/images/Group 1096.svg">
+                                    <img src="./assets/images/Group 1096.svg">
                                 </div>
 
                             </div>
@@ -355,7 +357,7 @@
                     <!-- END FOOTER TOP -->
 
                     <!-- START FOOTER BOTTOM -->
-                    <div class="footer-section-rectangle-bottom">
+                   <div class="footer-section-rectangle-bottom">
                         <div class="section-rectangle-bottom">
                             <div class="footer-section-group2">
                                 <div class="footer-section-splitbills">
@@ -383,7 +385,7 @@
 
                         </div>
 
-                    </div>
+                    </div> 
 
                     <!-- END FOOTER BOTTOM -->
 
