refs task [FE] Create SplitBill Interface

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <title>SplitBills</title>
     <link rel="stylesheet" href="./assets/style/splitbills.css">
     <link rel="stylesheet" href="./assets/style/responsive.css">
+    <!-- <link rel="stylesheet" href="./assets/style/responsive1.css"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
@@ -20,9 +22,9 @@
             <!-- START NAV-->
             <div class="nav-header">
                 <nav class="nav-header-menu">
-                    <div class="nav-menu-split">
-                        <a href="">SplitBills</a>
-                    </div>
+                         <div class="nav-menu-split">
+                            <a href="">SplitBills</a>
+                        </div> 
 
                     <div class="nav-menu">
                         <div class="nav-menu-works">
@@ -37,22 +39,32 @@
                             <a href="">Blog </a>
                         </div>
 
-                        <div class="nav-menu-help">
+                       <div class="nav-menu-help">
                             <a href="">Help</a>
                         </div>
                     </div>
+                   <div class="dropdown">
+                            <button onclick="myFunction()" class="dropbtn"><i class="fa fa-bars"></i></button>
+                            <div id="myDropdown" class="dropdown-content">
+                                <a href="#">How it works</a>
+                                <a href="#">Features</a>
+                                <a href="#">Blog</a>
+                                <a href="#">Help</a>
+                                <a href="#">Login</a>
+                                <a href="#">Sign up</a>
+                            </div>
+                    </div>  
+            
+                      <div class="nav-menu-login">
+                            <a href="">Login</a>
+                        </div>
 
-                    <div class="nav-menu-login">
-                        <a href="">Login</a>
-                    </div>
+                        <hr class="line">
+                        </hr> 
 
-                    <hr class="line">
-                    </hr>
-
-                    <div class="nav-menu-signup">
-                        <a cl ass="btnSignup" href="">Sign up</a>
-                    </div>
-
+                        <div class="nav-menu-signup">
+                            <a class="btnSignup" href="">Sign up</a>
+                        </div> 
                 </nav>
             </div>
             <!-- END NAV -->
@@ -61,17 +73,17 @@
             <main>
                 <section>
                     <!-- HERO PAGE -->
-                    <div class="main-section-transaction">
+                   <div class="main-section-transaction">
                         <div class="transaction">
                             <div class="phone">
                                 <img src="./assets/images/Group 1091.svg">
                             </div>
 
-                            <div class="transaction-text">
-                                <h1>Transactions are increasingly easy using
+                             <div class="transaction-text">
+                              <h1>Transactions are increasingly easy using
                                     <span>SplitBills</span>
                                 </h1>
-                                <h4>Easy to use, Simple to use & Safety to use </h4>
+                                <h4>Easy to use, Simple to use & Safety to use </h4> 
 
                                 <div class="app">
                                     <div class="googlepay">
@@ -82,14 +94,14 @@
                                         <img src="./assets/images/Group 1096.svg">
                                     </div>
                                 </div>
-                            </div>
+                            </div> 
                         </div>
                     </div>
                     <!-- END HERO PAGE -->
 
                     <!-- START SECTION -->
-                    <div class="main-section-sponsor-section">
-                        <div class="section-sponsor">
+                     <div class="main-section-sponsor-section">
+                       <div class="section-sponsor">
                             <div class="main-group-partner">
                                 <div class="group-partner1">
                                     <img src="./assets/images/digit-mv1gljkim5mp0kzt975saw4lf7g6xkqjt1nm7wtk9o 1.svg">
@@ -108,7 +120,7 @@
 
                             </div>
                         </div>
-                    </div>
+                    </div>  
 
 
                     <!-- END SPONSOR SECTION -->
@@ -117,17 +129,16 @@
                     <div class="main-section2">
                         <div class="main-section2-sociali">
                             <div class="main-section2-content">
-                                <div class="main-section2-become-title">
+                             <div class="main-section2-become-title">
                                     <h2> Socializing becomes more fun with SplitBills</h2>
-                                </div>
-
+                                </div> 
                                 <div class="main-section2-become-content">
                                     <p>Want to pay for anything is as easy as through the touch of a finger. Through SpliBills,
                                         you can carry out any transaction practically from bill payments, barcode scan transactions,
                                         to e-commerce. enjoy a payment method that is faster, practical and safe.</p>
                                 </div>
 
-                                <div class="sociali-group">
+                               <div class="sociali-group">
                                     <div class="sociali-group-img">
                                         <img src="./assets/images/Group 1101.svg">
                                     </div>
@@ -144,75 +155,69 @@
                                         <img src="./assets/images/Group 1104.svg">
                                     </div>
 
-                                </div>
+                                </div> 
                             </div>
 
                         </div>
-                    </div>
+                    </div>  
 
                     <!-- END SECTION2 -->
 
                     <!-- START SECTION3  -->
                     <div class="main-section3">
-                        <div class="main-section3-content">
-                            <div class="main-section3-content-title">
-                                <p>Amazing Features from us </p>
-                            </div>
+                            <div class="main-section3-content">
+                               <div class="main-section3-content-title">
+                                    <p>Amazing Features from us </p>
+                                </div> 
 
-                            <div class="main-section3-content-multi ">
+                               <div class="main-section3-content-multi">
 
-                                <div class="main-section3-multi-text">
-                                    <div class="multi-text1">Multi-Transaction</div>
-                                    <div class="multi-text2">Easy use with multi transaction features</div>
-                                </div>
+                                    <div class="main-section3-multi-text">
+                                        <div class="multi-text1">Multi-Transaction</div>
+                                        <div class="multi-text2">Easy use with multi transaction features</div>
+                                    </div>
 
                                 <div class="main-section3-multi-img">
-                                    <img src="./assets/images/Xn5FbEM9564.svg">
+                                        <img src="./assets/images/Xn5FbEM9564.svg">
+                                    </div>      
+
+                                </div> 
+
+                                <div class="main-section3-content-safety">
+
+                                    <div class="main-section3-safety-img">
+                                        <img src="./assets/images/Xn5FbEM9565.svg">
+                                    </div>
+
+                                    <div class="main-section3-safety-text">
+                                        <div class="safety-text1">Safety System </div>
+                                        <div class="safety-text2">Easy use with safety system features</div>
+                                    </div> 
                                 </div>
 
 
+                                <div class="main-section3-content-cashless">
+                                    <div class="main-section3-cashless-text">
+                                        <div class="cashless-text1">Cashless System</div>
+                                        <div class="cashless-text2">Say goodbay to Cash Transactions</div>
+                                    </div>
 
+                                    <div class="main-section3-cashless-img">
+                                        <img src="./assets/images/Xn5FbEM9566.svg">
+                                    </div>
+
+                                </div> 
                             </div>
-
-                            <div class="main-section3-content-safety">
-
-                                <div class="main-section3-safety-img">
-                                    <img src="./assets/images/Xn5FbEM9565.svg">
-                                </div>
-
-                                <div class="main-section3-safety-text">
-                                    <div class="safety-text1">Safety System </div>
-                                    <div class="safety-text2">Easy use with safety system features</div>
-                                </div>
-
-
-
-                            </div>
-
-
-                            <div class="main-section3-content-cashless">
-                                <div class="main-section3-cashless-text">
-                                    <div class="cashless-text1">Cashless System</div>
-                                    <div class="cashless-text2">Say goodbay to Cash Transactions</div>
-                                </div>
-
-                                <div class="main-section3-cashless-img">
-                                    <img src="./assets/images/Xn5FbEM9566.svg">
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
+                        </div>  
                     <!-- END SECTION3 -->
 
 
                     <!-- START SECTION4 -->
 
-                    <div class="main-section4">
+                <div class="main-section4">
                         <div class="main-section4-content-detail">
                             <div class="main-section-content">
                                 <p class="main-section4-title">Promo</p>
-
                                 <div class="section-promo">
                                     <div class="section4-promo1">
                                         <div class="section4-promo1-text">
@@ -222,24 +227,24 @@
                                          <div class="section4-promo1-img"><img src="./assets/images/pbgYcq3_Zx0.svg"></div>
                                     </div>
 
-                                    <div class="section4-promo2">
+                                     <div class="section4-promo2">
                                         <div class="section4-promo2-text">
                                             <span class="unline-splitbill">SplitBills</span> Can Be FUN!</div>
                                         <div class="section4-promo2-img"><img src="./assets/images/ILpCscZCeR8.svg"></div>
                                     </div>
 
-                                    <div class="section4-promo3">
+                                     <div class="section4-promo3">
                                         <div class="section4-promo3-text">Modern Payment with
                                             <span class="unline-splitbill">SplitBills</span>
                                         </div>
                                         <div class="section4-promo3-img"><img src="./assets/images/qydUw3DanPU.svg"></div>
-                                    </div>
+                                    </div>  
                                 </div>
 
                             </div>
-                        </div>
+                        </div> 
 
-                    </div>
+                    </div> 
                     <!-- END SECTION4 -->
 
                 </section>
@@ -250,10 +255,10 @@
             <footer>
                 <div class="footer-section">
                     <!-- START FOOTER TOP -->
-                    <div class="footer-section-rectangle-top">
+              <div class="footer-section-rectangle-top">
                         <div class="footer-section-group1">
                             <div class="section-group1-content1">
-                                <div class="group1-content1-text1">
+                               <div class="group1-content1-text1">
                                     <p>Learn more</p>
                                 </div>
 
@@ -277,9 +282,9 @@
                                     FAQs
                                 </div>
 
-                            </div>
+                            </div> 
 
-                            <div class="section-group1-content2">
+                           <div class="section-group1-content2">
                                 <div class="group1-content2-text1">
                                     Social
                                 </div>
@@ -304,17 +309,17 @@
                                     Linkedin
                                 </div>
 
-                            </div>
+                            </div> 
 
-
-                            <div class="section-group1-content3">
+ 
+                           <div class="section-group1-content3">
 
                                 <div class="group1-content3-subscribe">
                                     <p>Subscribe</p>
 
                                 </div>
 
-                                <div class="group1-content3-submit">
+                               <div class="group1-content3-submit">
 
                                     <div class="content3-submit-input">
                                         <div class="content3-submit-email">
@@ -333,9 +338,9 @@
 
                                 </div>
 
-                            </div>
+                            </div> 
 
-                            <div class="section-group1-content4">
+                           <div class="section-group1-content4">
 
                                 <div class="group1-content4-title">
                                     <p>Downloads</p>
@@ -344,27 +349,27 @@
                                 <div class="group1-content4-googlepay">
                                     <img src="./assets/images/Group 1095.svg">
                                 </div>
-
+                                
                                 <div class="group1-content4-appstore">
                                     <img src="./assets/images/Group 1096.svg">
                                 </div>
 
-                            </div>
+                            </div> 
 
                         </div>
 
-                    </div>
+                    </div> 
                     <!-- END FOOTER TOP -->
 
                     <!-- START FOOTER BOTTOM -->
-                   <div class="footer-section-rectangle-bottom">
-                        <div class="section-rectangle-bottom">
-                            <div class="footer-section-group2">
+                  <div class="footer-section-rectangle-bottom">
+                         <div class="section-rectangle-bottom">
+                           <div class="footer-section-group2">
                                 <div class="footer-section-splitbills">
                                     <p>© 2020 SplitBills Inc.</p>
                                 </div>
 
-                                <div class="link-group">
+                             <div class="link-group">
 
                                     <div class="section-group2-term">
                                         <p>Term of use</p>
@@ -377,22 +382,40 @@
                                     <div class="section-group2-cardholder">
                                         <p>Cardholder Agreement </p>
                                     </div>
-                                </div>
+                                </div> 
 
-                            </div>
-
-
+                            </div>  
 
                         </div>
 
-                    </div> 
-
+                    </div>
                     <!-- END FOOTER BOTTOM -->
 
 
                 </div>
                 <footer>
         </div>
+
+
+        <script>
+
+            function myFunction() {
+                document.getElementById("myDropdown").classList.toggle("show");
+            }
+
+            window.onclick = function (event) {
+                if (!event.target.matches('.dropbtn')) {
+                    var dropdowns = document.getElementsByClassName("dropdown-content");
+                    var i;
+                    for (i = 0; i < dropdowns.length; i++) {
+                        var openDropdown = dropdowns[i];
+                        if (openDropdown.classList.contains('show')) {
+                            openDropdown.classList.remove('show');
+                        }
+                    }
+                }
+            }
+        </script>
 </body>
 
 </html>
