refs task [FE] Create Agency Interface

--- a/index.html
+++ b/index.html
@@ -209,11 +209,12 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="swiper-container mySwiper" id="#container__section4">
                     <div class="container__section4__title">
                         Our <span class="underline-slide" style="text-decoration: underline;">Work</span>
                     </div>
-                    <div class="swiper-wrapper">
+                    <div class="swiper-wrapper" id="swiper-wrapper4">
                         <div class="swiper-slide" id="swiper1__slide1__section4">
                             <div class="swiper-slide-overlay"></div>
                             <div class="swiper-slide-details fadeIn-bottom">
@@ -280,12 +281,12 @@
                     <p class="count__number1"></p>
                 </div>
 
-                <div class="swiper-container swiper" id="swiper__service__section5">
+                <div class="swiper-container swiper" id="#container__section5">
                     <div class="container__section5__title">
                         Our <span class="underline-slide" style="text-decoration: underline;">Service</span>
                     </div>
-                    <div class="swiper-wrapper" id="swiper__wrapper__service">
-                        <div class="swiper-slide" id="swiper-slide__1">
+                    <div class="swiper-wrapper" id="swiper-wrapper5">
+                        <div class="swiper-slide" id="swiper1__slide1__section5">
                             <div class="swiper-slide__image1">
                                 <img src="./assets/images/Rectangle 178.svg" class="img2">
                             </div>
@@ -295,67 +296,35 @@
 
                             </div>
                             <div class="swiper-slide__library1">Library Room Design</div>
+
                         </div>
 
-                        <div class="swiper-slide" id="swiper-slide__1">
+                        <div class="swiper-slide" id="swiper1__slide1__section5">
                             <div class="swiper-slide__image1">
-                                <img src="./assets/images/Rectangle 178.svg">
+                                <img src="./assets/images/Rectangle 178.svg" class="img2">
                             </div>
-                            <div class="swiper-slide__icon__design">
-                                <div class="swiper-slide__icon"></div>
-                                <div class="swiper-slide__design">Design Interior</div>
+                            <div class="swiper-slide__icon__design1">
+                                <div class="swiper-slide__icon1"></div>
+                                <div class="swiper-slide__design1">Design Interior</div>
+
                             </div>
-                            <div class="swiper-slide__rest">Rest Room Design</div>
+                            <div class="swiper-slide__library1">Rest Room Design</div>
+
                         </div>
 
-                        <div class="swiper-slide" id="swiper-slide__1">
+                        <div class="swiper-slide" id="swiper1__slide1__section5">
                             <div class="swiper-slide__image1">
-                                <img src="./assets/images/Rectangle 178.svg">
+                                <img src="./assets/images/Rectangle 178.svg" class="img2">
                             </div>
-                            <div class="swiper-slide__icon__design">
-                                <div class="swiper-slide__icon"></div>
-                                <div class="swiper-slide__archirecture"> Design Architecture</div>
-                            </div>
-                            <div class="swiper-slide__building">Building Design</div>
-                        </div>
+                            <div class="swiper-slide__icon__design2">
+                                <div class="swiper-slide__icon2"></div>
+                                <div class="swiper-slide__design2">Design Interior</div>
 
-                        <div class="swiper-slide" id="swiper-slide__1">
-                            <div class="swiper-slide__image1">
-                                <img src="./assets/images/Rectangle 178.svg">
                             </div>
-                            <div class="swiper-slide__icon__design">
-                                <div class="swiper-slide__icon"></div>
-                                <div class="swiper-slide__design">Design Interior</div>
-                            </div>
-                            <div class="swiper-slide__library">Library Room Design</div>
-                        </div>
+                            <div class="swiper-slide__library2">Library Room Design</div>
 
-                        <div class="swiper-slide" id="swiper-slide__1">
-                            <div class="swiper-slide__image1">
-                                <img src="./assets/images/Rectangle 178.svg">
-                            </div>
-                            <div class="swiper-slide__icon__design">
-                                <div class="swiper-slide__icon"></div>
-                                <div class="swiper-slide__design">Design Interior</div>
-                            </div>
-                            <div class="swiper-slide__rest">Rest Room Design</div>
                         </div>
-                        <div class="swiper-pagination" id="swiper-pagination2">
-                            <span class="swiper-pagination-bullet swiper-pagination-bullet-active" id="0" tabindex="0" role="button" aria-label="Go to slide 1"></span>
-                            <span class="swiper-pagination-bullet" id="1" tabindex="1" role="button" aria-label="Go to slide 2"></span>
-                            <span class="swiper-pagination-bullet" id="2" tabindex="2" role="button" aria-label="Go to slide 3"></span>
-                            <span class="swiper-pagination-bullet" id="3" tabindex="3" role="button" aria-label="Go to slide 4"></span>
-                            <span class="swiper-pagination-bullet" id="4" tabindex="4" role="button" aria-label="Go to slide 5"></span>
-                        </div>
-                        <p class="count__number2"></p>
-                    </div>
-                    <!-- 
-                <div class="swiper-container swiper" id="swiper__service__section5">
-                    <div class="container__section5__title">
-                        Our <span class="underline-slide" style="text-decoration: underline;">Service</span>
-                    </div>
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide" id="swiper-slide__1">
+                        <div class="swiper-slide" id="swiper1__slide1__section5">
                             <div class="swiper-slide__image1">
                                 <img src="./assets/images/Rectangle 178.svg" class="img2">
                             </div>
@@ -365,51 +334,24 @@
 
                             </div>
                             <div class="swiper-slide__library1">Library Room Design</div>
+
                         </div>
 
-                        <div class="swiper-slide" id="swiper-slide__1">
+                        <div class="swiper-slide" id="swiper1__slide1__section5">
                             <div class="swiper-slide__image1">
-                                <img src="./assets/images/Rectangle 178.svg">
+                                <img src="./assets/images/Rectangle 178.svg" class="img2">
                             </div>
-                            <div class="swiper-slide__icon__design">
-                                <div class="swiper-slide__icon"></div>
-                                <div class="swiper-slide__design">Design Interior</div>
+                            <div class="swiper-slide__icon__design1">
+                                <div class="swiper-slide__icon1"></div>
+                                <div class="swiper-slide__design1">Design Interior</div>
+
                             </div>
-                            <div class="swiper-slide__rest">Rest Room Design</div>
+                            <div class="swiper-slide__library1">Rest Room Design</div>
+
                         </div>
 
-                        <div class="swiper-slide" id="swiper-slide__1">
-                            <div class="swiper-slide__image1">
-                                <img src="./assets/images/Rectangle 178.svg">
-                            </div>
-                            <div class="swiper-slide__icon__design">
-                                <div class="swiper-slide__icon"></div>
-                                <div class="swiper-slide__archirecture"> Design Architecture</div>
-                            </div>
-                            <div class="swiper-slide__building">Building Design</div>
-                        </div>
 
-                        <div class="swiper-slide" id="swiper-slide__1">
-                            <div class="swiper-slide__image1">
-                                <img src="./assets/images/Rectangle 178.svg">
-                            </div>
-                            <div class="swiper-slide__icon__design">
-                                <div class="swiper-slide__icon"></div>
-                                <div class="swiper-slide__design">Design Interior</div>
-                            </div>
-                            <div class="swiper-slide__library">Library Room Design</div>
-                        </div>
 
-                        <div class="swiper-slide" id="swiper-slide__1">
-                            <div class="swiper-slide__image1">
-                                <img src="./assets/images/Rectangle 178.svg">
-                            </div>
-                            <div class="swiper-slide__icon__design">
-                                <div class="swiper-slide__icon"></div>
-                                <div class="swiper-slide__design">Design Interior</div>
-                            </div>
-                            <div class="swiper-slide__rest">Rest Room Design</div>
-                        </div>
                     </div>
                     <div class="swiper-pagination" id="pagination2">
                         <span class="swiper-pagination-bullet swiper-pagination-bullet-active" id="0" tabindex="0" role="button" aria-label="Go to slide 1"></span>
@@ -419,7 +361,7 @@
                         <span class="swiper-pagination-bullet" id="4" tabindex="4" role="button" aria-label="Go to slide 5"></span>
                     </div>
                     <p class="count__number2"></p>
-                </div> -->
+                </div>
 
             </main>
             <footer>
@@ -460,54 +402,53 @@
         </menu>
 
 
-        </div>
-        <!-- Swiper JS -->
-        <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
+    </div>
+    <!-- Swiper JS -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
-        <!-- Initialize Swiper -->
-        <script>
-            var swiper = new Swiper(".mySwiper", {
-                slidesPerView: 3,
-                spaceBetween: 80,
-                centeredSlides: true,
-                pagination: {
-                    el: ".swiper-pagination",
-                    clickable: true,
+    <!-- Initialize Swiper -->
+    <script>
+        var swiper = new Swiper(".mySwiper", {
+            slidesPerView: 3,
+            spaceBetween: 80,
+            centeredSlides: true,
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true,
 
-                },
-            });
+            },
+        });
 
-            var count = 1;
-            var total = 5;
-            var show = $('.count__number1');
-            show.text(count + '/' + total);
-            $('.swiper-pagination-bullet').mouseenter(function() {
-                var index = $(this).index() + 1;
-                $('.count__number1').html(index + '/' + total);
-            });
-        </script>
+        var count = 1;
+        var total = 5;
+        var show = $('.count__number1');
+        show.text(count + '/' + total);
+        $('.swiper-pagination-bullet').mouseenter(function() {
+            var index = $(this).index() + 1;
+            $('.count__number1').html(index + '/' + total);
+        });
+    </script>
 
-        <script>
-            var swiper = new Swiper(".swiper", {
-                slidesPerView: 3,
-                spaceBetween: 39,
-                centeredSlides: true,
-                pagination: {
-                    el: ".swiper-pagination",
-                    clickable: true,
-                },
-            });
+    <script>
+        var swiper = new Swiper(".swiper", {
+            slidesPerView: 3,
+            spaceBetween: 39,
+            centeredSlides: true,
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true,
+            },
+        });
 
-            var count = 1;
-            var total = 5;
-            var show = $('.count__number2');
-            show.text(count + '/' + total);
-            $('.swiper-pagination-bullet').mouseenter(function() {
-                var index = $(this).index() + 1;
-                $('.count__number2').html(index + '/' + total);
-            });
-        </script>
+        var count = 1;
+        var total = 5;
+        var show = $('.count__number2');
+        show.text(count + '/' + total);
+        $('.swiper-pagination-bullet').mouseenter(function() {
+            var index = $(this).index() + 1;
+            $('.count__number2').html(index + '/' + total);
+        });
+    </script>
 </body>
 
 </html>
